--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -1060,18 +1060,18 @@
 .services-cta{
     position: relative;
     height: 35em;
-    margin: 4em 0 0 0;
+    // margin: 4em 0 0 0;
     @media #{$breakpoint-md} {
-        height: 20em;
+        height: 17em;
     }
     @media #{$breakpoint-lg} {
-        height: 20em;
+        height: 18em;
     }
     @media  #{$breakpoint-xl}{
-        height: 20em;
+        height: 15em;
     }
     @media  #{$breakpoint-xxl}{
-        height: 17em;
+        height: 15em;
     }
 }
 
@@ -1114,7 +1114,7 @@
         height: 9em;
     }
     @media #{$breakpoint-xl} {
-        height: 10em;
+        height: 7em;
     }
     @media #{$breakpoint-xxl} {
         height: 7.5em;
