--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -98,6 +98,11 @@
             width: 16em;
         }
     }
+    p {
+        @media #{$breakpoint-xxl}{
+            font-size: .9em;
+        }
+    }
     .logo-sub {
         font-size: 2.9em;
         font-weight: 400;
