--- a/static/css/main.css
+++ b/static/css/main.css
@@ -641,12 +641,18 @@ template {
 
 .cta-title {
   font-family: "biko", serif;
-  font-size: 2.5em;
+  font-size: 2.1em;
   font-weight: 400;
   padding: 5px;
   text-transform: uppercase;
   line-height: 1.2;
   letter-spacing: 0.1em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .cta-title {
+    font-size: 1.7em;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -677,12 +683,18 @@ template {
 
 .cta-subtitle {
   font-family: "biko", serif;
-  font-size: 1.8em;
+  font-size: 1.5em;
   font-weight: 400;
   padding: 5px;
   text-transform: uppercase;
   line-height: 1.2;
   letter-spacing: 0.1em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .cta-subtitle {
+    font-size: 1.3em;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1228,8 +1240,8 @@ footer {
 }
 
 .nav {
-  -webkit-transition: right 1s ease;
-  transition: right 1s ease;
+  -webkit-transition: right .8s ease;
+  transition: right .8s ease;
   background: #fbf2ec;
   color: 0;
   cursor: pointer;
@@ -1245,7 +1257,7 @@ footer {
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .nav {
     height: 21em;
-    width: 17em;
+    width: 16em;
   }
 }
 
@@ -1257,31 +1269,31 @@ footer {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .nav {
-    height: 20em;
+    height: 19.5em;
     width: 14em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .nav {
-    padding: 1em 2em 1em 2em;
-    height: 17.5em;
+    padding: 1em 2em .6em 1.5em;
+    height: 18em;
     width: 12.5em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .nav {
-    padding: 1em 1em 1em 1em;
-    height: 14em;
+    padding: 1em 1em .8em 1.3em;
+    height: 16em;
     width: 11em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .nav {
-    padding: 1em 1em 1em 1em;
-    height: 12em;
+    padding: 1em 1em .8em 1em;
+    height: 14em;
     width: 9em;
   }
 }
@@ -1313,20 +1325,20 @@ footer {
 }
 
 .nav-item {
-  margin: .5em 0;
-  font-size: 1.08em;
+  margin: .7em 0;
+  font-size: .9em;
   font-family: "biko", serif;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .nav-item {
-    font-size: 1.1em;
+    font-size: .95em;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .nav-item {
-    font-size: 1.1em;
+    font-size: 1em;
   }
 }
 
@@ -1568,15 +1580,22 @@ footer {
   font-size: 1.3em;
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .social-nav-item {
+    font-size: 1.35em;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .social-nav-item {
     margin: .4em;
+    font-size: 1.5em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .social-nav-item {
-    font-size: 1.1em;
+    font-size: 1.3em;
   }
 }
 
@@ -2060,6 +2079,7 @@ footer {
   display: grid;
   -ms-grid-rows: (auto)[2];
       grid-template-rows: repeat(2, auto);
+  grid-row-gap: 4em;
   -ms-grid-columns: 65vw;
       grid-template-columns: 65vw;
   margin: 5em 0;
@@ -2224,8 +2244,8 @@ footer {
   text-align: center;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: auto 32em minmax(auto, 28em) 7em;
-      grid-template-rows: auto 32em minmax(auto, 28em) 7em;
+  -ms-grid-rows: auto 35em minmax(auto, 28em) 7em;
+      grid-template-rows: auto 35em minmax(auto, 28em) 7em;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -2351,9 +2371,10 @@ footer {
 
 .home-about-img {
   width: 85vw;
+  margin: auto;
   -o-object-fit: cover;
   object-fit: cover;
-  height: 100%;
+  height: 90%;
   background-color: white;
   padding: 20px;
 }
@@ -2483,10 +2504,12 @@ footer {
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .quote {
     height: 14em;
+    width: 26em;
     padding: 1.5em;
   }
   .quote .quote-text {
-    font-size: 1.7em;
+    margin: .6em .6em 0.4em .6em;
+    font-size: 1.6em;
   }
 }
 
@@ -2943,7 +2966,13 @@ footer {
 
 .quiz-cta-content {
   width: 75%;
-  margin: 4em auto;
+  margin: 4em auto 2em auto;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-cta-content {
+    margin: 3em auto 2em auto;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2969,7 +2998,7 @@ footer {
 
 .quiz-content-title {
   font-weight: 400;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2991,9 +3020,15 @@ footer {
 }
 
 .quiz-font {
-  font-size: 7.5em;
+  font-size: 7em;
   letter-spacing: .1em;
   line-height: .6em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-font {
+    font-size: 6em;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -3019,8 +3054,8 @@ footer {
 }
 
 .quiz-cta-btn {
-  font-size: 1.4em;
-  padding: .7em 2em;
+  font-size: 1.2em;
+  padding: .6em 2em;
   font-weight: 500;
 }
 
@@ -3046,7 +3081,13 @@ footer {
 }
 
 .quiz-cta {
-  margin: 4em auto;
+  margin: 4em auto 2em auto;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-cta {
+    margin: 2em auto;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -4603,7 +4644,13 @@ footer {
 
 .services-cta {
   position: relative;
-  height: 35em;
+  height: 25em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .services-cta {
+    height: 22em;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -4654,13 +4701,19 @@ footer {
   text-align: center;
   color: white;
   width: 23em;
-  height: 20em;
+  height: 17em;
   margin: auto;
   position: absolute;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .services-cta-content {
+    height: 13em;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -4694,6 +4747,12 @@ footer {
   margin: auto;
   bottom: 1em;
   width: 220px;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .services-cta-btn {
+    width: 18em;
+  }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -4926,6 +4985,7 @@ footer {
   display: grid;
   -ms-grid-rows: (auto)[2];
       grid-template-rows: repeat(2, auto);
+  grid-row-gap: 4em;
   -ms-grid-columns: 65vw;
       grid-template-columns: 65vw;
   margin: 5em 0;
@@ -5090,8 +5150,8 @@ footer {
   text-align: center;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: auto 32em minmax(auto, 28em) 7em;
-      grid-template-rows: auto 32em minmax(auto, 28em) 7em;
+  -ms-grid-rows: auto 35em minmax(auto, 28em) 7em;
+      grid-template-rows: auto 35em minmax(auto, 28em) 7em;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -5217,9 +5277,10 @@ footer {
 
 .home-about-img {
   width: 85vw;
+  margin: auto;
   -o-object-fit: cover;
   object-fit: cover;
-  height: 100%;
+  height: 90%;
   background-color: white;
   padding: 20px;
 }
@@ -5349,10 +5410,12 @@ footer {
 @media only screen and (min-width: 500px) and (max-width: 767px) {
   .quote {
     height: 14em;
+    width: 26em;
     padding: 1.5em;
   }
   .quote .quote-text {
-    font-size: 1.7em;
+    margin: .6em .6em 0.4em .6em;
+    font-size: 1.6em;
   }
 }
 
@@ -5809,7 +5872,13 @@ footer {
 
 .quiz-cta-content {
   width: 75%;
-  margin: 4em auto;
+  margin: 4em auto 2em auto;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-cta-content {
+    margin: 3em auto 2em auto;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -5835,7 +5904,7 @@ footer {
 
 .quiz-content-title {
   font-weight: 400;
-  font-size: 1.3em;
+  font-size: 1.1em;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -5857,9 +5926,15 @@ footer {
 }
 
 .quiz-font {
-  font-size: 7.5em;
+  font-size: 7em;
   letter-spacing: .1em;
   line-height: .6em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-font {
+    font-size: 6em;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -5885,8 +5960,8 @@ footer {
 }
 
 .quiz-cta-btn {
-  font-size: 1.4em;
-  padding: .7em 2em;
+  font-size: 1.2em;
+  padding: .6em 2em;
   font-weight: 500;
 }
 
@@ -5912,7 +5987,13 @@ footer {
 }
 
 .quiz-cta {
-  margin: 4em auto;
+  margin: 4em auto 2em auto;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .quiz-cta {
+    margin: 2em auto;
+  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
