--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -160,6 +160,7 @@
     
     display: grid;
     grid-template-rows: repeat(2, auto); 
+    grid-row-gap: 4em;
     grid-template-columns: 65vw;
     margin: 5em 0;
     text-align: center;
@@ -273,7 +274,7 @@
     padding-bottom: 2em;
     text-align: center;
     display: grid;
-    grid-template-rows: auto 32em minmax(auto, 28em) 7em;
+    grid-template-rows: auto 35em minmax(auto, 28em) 7em;
 
     @media #{$breakpoint-sm} {
         grid-template-rows: auto 36em minmax(auto, 24em) 4em;
@@ -356,10 +357,10 @@
 
 .home-about-img{
     width: 85vw;
-    // margin: auto;
+    margin: auto;
     -o-object-fit: cover;
     object-fit: cover;
-    height: 100%;
+    height: 90%;
     background-color: white;
     padding: 20px;
     @media #{$breakpoint-sm} {
@@ -453,9 +454,11 @@
     }
     @media #{$breakpoint-sm} {
         height: 14em;
+        width: 26em;
         padding: 1.5em;
         .quote-text{
-            font-size: 1.7em;
+            margin: .6em .6em 0.4em .6em;
+            font-size: 1.6em;
         }
     }
     @media #{$breakpoint-md} {
@@ -785,7 +788,10 @@
 
 .quiz-cta-content{
     width: 75%;
-    margin: 4em auto;
+    margin: 4em auto 2em auto;
+    @media #{$breakpoint-sm}{
+        margin: 3em auto 2em auto;
+    }
     @media #{$breakpoint-md}{
         width: 60%;
         margin: 3em auto 0 auto;
@@ -802,7 +808,7 @@
 
 .quiz-content-title{
     font-weight: 400;
-    font-size: 1.3em;
+    font-size: 1.1em;
     @media #{$breakpoint-md}{
         font-size: .8em;
     }
@@ -815,9 +821,12 @@
 }
 
 .quiz-font{
-    font-size: 7.5em;
+    font-size: 7em;
     letter-spacing: .1em;
     line-height: .6em;
+    @media #{$breakpoint-sm}{
+        font-size: 6em;
+    }
     @media #{$breakpoint-md}{
         font-size: 4em;
     }
@@ -834,8 +843,8 @@
 }
 
 .quiz-cta-btn{
-    font-size: 1.4em;
-    padding: .7em 2em;
+    font-size: 1.2em;
+    padding: .6em 2em;
     font-weight: 500;
     @media #{$breakpoint-md}{
         font-size: .9em;
@@ -852,7 +861,10 @@
 }
 
 .quiz-cta{
-    margin: 4em auto;
+    margin: 4em auto 2em auto;
+    @media #{$breakpoint-sm}{
+        margin: 2em auto;
+    }
     @media #{$breakpoint-md}{
         margin: 1em auto;
     }
