--- a/static/scss/base/_colors.scss
+++ b/static/scss/base/_colors.scss
@@ -5,6 +5,7 @@ $dark-pink: rgba(250,220,210,1);
 $gray: rgba(240,243,243,1);
 $light-gray: rgba(186,197,202,1);
 $base-text-color: rgba(59,64,63,1);
+$aqua-bg: rgba(228, 241, 241, 1);
 
 
 $-aqua: #28dde0;
