--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -28,7 +28,8 @@
 @import
   'components/navbar',
   'components/button',
-  'components/quiz_banner';
+  'components/quiz_banner',
+  'components/quiz_full';
 
 // 6. Page-specific styles
 @import
