--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -23,7 +23,7 @@
 }
 
 .quiz-content-main-fs{
-    font-size: .7em;
+    font-size: .65em;
 }
 
 .quiz-main-fs{
@@ -59,4 +59,20 @@
 input[type='checkbox'] {
     margin: .3em;
     transform: scale(1.2);
+}
+
+.options{
+    text-align: center;
+}
+
+.option-btn{
+    background-color: antiquewhite;
+    border: none;
+    font-size: .77em;
+    padding: .2em .9em;
+    text-transform: uppercase;
+}
+
+.highlight-btn{
+    background-color: aqua;
 }
