--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1877,6 +1877,7 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #e4f1f1;
 }
 
 .quiz-intro-fs {
@@ -1918,8 +1919,8 @@ footer {
   margin: .5em;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
+  -ms-grid-rows: auto auto;
+      grid-template-rows: auto auto;
 }
 
 .quiz-checkboxes {
@@ -1928,6 +1929,7 @@ footer {
 
 .quiz-label {
   display: inline-block;
+  margin-top: 1em;
 }
 
 input[type='checkbox'] {
@@ -1945,11 +1947,17 @@ input[type='checkbox'] {
   border: none;
   font-size: .77em;
   padding: .2em .9em;
+  margin: 1em auto;
   text-transform: uppercase;
 }
 
 .highlight-btn {
   background-color: aqua;
+}
+
+.quiz-hr {
+  margin: 0 auto;
+  width: 20em;
 }
 
 @media only screen and (max-width: 500px) {
