--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: $aqua-bg;
 }
 
 .quiz-intro-fs{
@@ -43,7 +44,7 @@
 .quiz-item{
     margin: .5em;
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
 
  
 }
@@ -54,6 +55,7 @@
 
 .quiz-label{
     display: inline-block;
+    margin-top: 1em ;
 }
 
 input[type='checkbox'] {
@@ -70,9 +72,15 @@ input[type='checkbox'] {
     border: none;
     font-size: .77em;
     padding: .2em .9em;
+    margin: 1em auto;
     text-transform: uppercase;
 }
 
 .highlight-btn{
     background-color: aqua;
+}
+
+.quiz-hr{
+    margin: 0 auto;
+    width: 20em;
 }
