--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1878,6 +1878,7 @@ footer {
       -ms-flex-align: center;
           align-items: center;
   background-color: #e4f1f1;
+  padding: 2em 0;
 }
 
 .quiz-intro-fs {
@@ -1943,7 +1944,7 @@ input[type='checkbox'] {
 }
 
 .option-btn {
-  background-color: antiquewhite;
+  background-color: #fadcd2;
   border: none;
   font-size: .77em;
   padding: .2em .9em;
@@ -1952,12 +1953,32 @@ input[type='checkbox'] {
 }
 
 .highlight-btn {
-  background-color: aqua;
+  background-color: black;
+  color: white;
 }
 
 .quiz-hr {
   margin: 0 auto;
   width: 20em;
+}
+
+.quiz-result {
+  text-align: left;
+  width: 35em;
+  margin: 2em auto;
+}
+
+.quiz-submit {
+  padding: .6em .9em;
+  border: none;
+  margin: 2em auto;
+}
+
+.result-highlight {
+  font-size: .9em;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 11px 8px white;
+          box-shadow: 0px 0px 11px 8px white;
 }
 
 @media only screen and (max-width: 500px) {
