--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     background-color: $aqua-bg;
+    padding: 2em 0;
 }
 
 .quiz-intro-fs{
@@ -68,7 +69,7 @@ input[type='checkbox'] {
 }
 
 .option-btn{
-    background-color: antiquewhite;
+    background-color:$dark-pink;
     border: none;
     font-size: .77em;
     padding: .2em .9em;
@@ -77,10 +78,29 @@ input[type='checkbox'] {
 }
 
 .highlight-btn{
-    background-color: aqua;
+    background-color: black;
+    color: white;
 }
 
 .quiz-hr{
     margin: 0 auto;
     width: 20em;
+}
+
+.quiz-result{
+    text-align: left;
+    width: 35em;
+    margin: 2em auto;
+}
+
+.quiz-submit{
+    padding: .6em .9em;
+    border: none;
+    margin: 2em auto;
+}
+
+.result-highlight{
+    font-size: .9em;
+    border-radius: 5px;
+    box-shadow: 0px 0px 11px 8px white;
 }
