Add smooth scroll to quiz
Need to scroll to target

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1867,6 +1867,15 @@ footer {
   }
 }
 
+html {
+  height: 100%;
+  overflow: auto;
+}
+
+body {
+  height: 100%;
+}
+
 .quiz-full-screen {
   display: -webkit-box;
   display: -ms-flexbox;
