--- a/static/scss/components/_quiz_full.scss
+++ b/static/scss/components/_quiz_full.scss
@@ -1,3 +1,6 @@
+
+html { height: 100%; overflow:auto; }
+body { height: 100%; }
 .quiz-full-screen{
     display: flex;
     justify-content: center;
